apps/erin-apps/librenms/sea1/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail-webhook
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: nms.generalprogramming.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librenms
                port:
                  number: 80
---
